creating structure layout

--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <title>Arsenal Outfit</title>
 </head>
+
 <body>
-    
-</body>
+    <nav class="navbar navbar-expand-lg bg-transparent">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="assets/logo/logo-brasil.jpg" alt="Logo" width="50" height="50"
+                    class="d-inline-block align-text-top">
+            </a>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Quem somos?</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Perguntas Frequentes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contato</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+        <div class="row g-0">
+          <div class="col-md-4 d-flex justify-content-center">
+            <img src="assets/layout/cbf.png" class="d-inline-block align-text-top" alt="...">
+          </div>
+          <div class="col-md-8 d-flex align-items-center">
+            <div class="layout">
+              <h5 class="title">CAMISA DA COPA</h5>
+              <h6>SELEÇÃO BRASILEIRA</h6>
+              <p>Você achou alto o preço das novas camisas do Brasil?<br>
+                Então, você chegou ao lugar certo, vendemos camisas da Seleção Brasileira<br>
+                com o menor preço e com a qualidade da original.</p>
+            </div>
+          </div>
+        </div>
+    </body>
+
 </html>
