--- a/index.html
+++ b/index.html
@@ -12,41 +12,103 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-transparent">
+    <nav class="navbar navbar-expand-lg bg-transparent fixed-top navbar-expand-md">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="assets/logo/logo-brasil.jpg" alt="Logo" width="50" height="50"
+                <img id="img-navbar" src="assets/logo/logo-brasil.jpg" alt="Logo" width="50" height="50"
                     class="d-inline-block align-text-top">
             </a>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Quem somos?</a>
+                        <a class="nav-link" href="#quem-somos">Quem somos?</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Perguntas Frequentes</a>
+                        <a class="nav-link" href="#perguntas-frenquentes">Perguntas Frequentes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contato</a>
+                        <a class="nav-link" href="#contact">Contato</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-        <div class="row g-0">
-          <div class="col-md-4 d-flex justify-content-center">
-            <img src="assets/layout/cbf.png" class="d-inline-block align-text-top" alt="...">
-          </div>
-          <div class="col-md-8 d-flex align-items-center">
-            <div class="layout">
-              <h5 class="title">CAMISA DA COPA</h5>
-              <h6>SELEÇÃO BRASILEIRA</h6>
-              <p>Você achou alto o preço das novas camisas do Brasil?<br>
-                Então, você chegou ao lugar certo, vendemos camisas da Seleção Brasileira<br>
-                com o menor preço e com a qualidade da original.</p>
+        <section class="row">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
+                    <img id="img-layout" src="https://seeklogo.com/images/C/cbf-brasil-football-federation-logo-9DFCA91AA7-seeklogo.com.png" class="d-inline-block align-text-top" alt="...">
+                </div>
+                <div class="col-md-8 d-flex align-items-center">
+                    <div class="layout">
+                        <h5 class="title">CAMISA DA COPA</h5>
+                        <h1>SELEÇÃO BRASILEIRA</h1>
+                        <p>Você achou alto o preço das novas camisas do Brasil?<br>
+                        Então, você chegou ao lugar certo, vendemos camisas da Seleção Brasileira<br>
+                        com o menor preço e com a qualidade da original.</p>
+                    </div>
+                </div>
+                <div id="list" class="d-flex justify-content-around align-items-sm-center text-uppercase text-light">
+                    <div class="d-flex">
+                        <img src="assets/layout/money-list.png" width="50" height="50" >
+                        <div class="title text-center align-self-sm-center m-1">Preço</div>
+                    </div>
+                    <div class="d-flex">
+                        <img src="assets/layout/money-list.png" width="50" height="50" >
+                        <div class="title text-center align-self-sm-center m-1">Qualidade</div>
+                    </div>
+                    <div class="d-flex">
+                        <img src="assets/layout/money-list.png" width="50" height="50" >
+                        <div class="title text-center align-self-sm-center m-1">Personalização</div>
+                    </div>
+                    <div class="d-flex">
+                        <img src="assets/layout/money-list.png" width="50" height="50" >
+                        <div class="title text-center align-self-sm-center m-1">Frete Grátis</div>
+                    </div>
+                </div>
+        </section>
+        
+        <section id="quem-somos" class="d-flex align-items-center">
+            <div class="container align-items-center">
+                <div class="row">
+                    <div class="d-flex col-6">
+                        <img id="img-quem" src="assets/logo/logo-brasil.jpg">
+                    </div>
+                    <div class="d-flex col-6" id="text-quem">
+                        <div class="text-center">
+                            <h4>Quem somos?</h4>
+                            <h5>Arsenal Outfit</h5>
+                            <p>
+                                A empresa que se define como “uma escola das coisas que não se aprendem na escola” deixa os próprios alunos falarem de sua experiência na página de sobre. Isso ajuda a passar credibilidade, afinal, é mais fácil confiar nos próprios clientes, que experimentaram o produto ou serviço, do que na voz da própria empresa. Incluir relatos de clientes na página de sobre pode dar aos visitantes uma opinião mais realista e embasada sobre seu negócio.
+                            </p>
+                        </div>
+    
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-    </body>
+        </section>
 
+        <section id="perguntas-frenquentes" class="text-light container">
+            <div class="mb-3">
+                <h4 class="m-2 text-center">FAQ - Perguntas Frequentes</h4>
+                <div class="card-body">
+                    <h5 class="card-title">1- Existe um valor mínimo de pedido? </h5>
+                    <p class="card-text">Não.</p>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">2- É possível encomendar um produto que não esteja à venda? </h5>
+                    <p class="card-text">Sim, mas será necessário, enviar todas as informações do produto.</p>
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">3- Eu consigo mandar uma parte da compra para um endereço e outra parte para outro?</h5>
+                    <p class="card-text">Não. Todos os produtos adquiridos em determinada Compra serão entregues conjuntamente, no mesmo endereço. Para enviar produtos para dois endereços diferentes, será necessário realizar duas Compras diferentes, em momentos distintivos.</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact">
+            <div class="row d-flex justify-content-center align-items-center">
+            <h4>Contato</h4>
+            <p>...</p>
+            </div>
+        </section>
+    </body>
 </html>
