creating section contact

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 </div>
                 <div class="col-md-8 d-flex align-items-center">
                     <div class="layout">
-                        <h5 class="title">CAMISA DA COPA</h5>
-                        <h1>SELEÇÃO BRASILEIRA</h1>
+                        <h3 id="title-menor" class="title">CAMISA DA COPA</h3>
+                        <h1 id="title-maior">SELEÇÃO BRASILEIRA</h1>
                         <p>Você achou alto o preço das novas camisas do Brasil?<br>
                         Então, você chegou ao lugar certo, vendemos camisas da Seleção Brasileira<br>
                         com o menor preço e com a qualidade da original.</p>
@@ -69,7 +69,7 @@
         <section id="quem-somos" class="d-flex align-items-center">
             <div class="container align-items-center">
                 <div class="row">
-                    <div class="d-flex col-6">
+                    <div class="d-flex col-6 justify-content-center">
                         <img id="img-quem" src="assets/logo/logo-brasil.jpg">
                     </div>
                     <div class="d-flex col-6" id="text-quem">
@@ -104,11 +104,16 @@
             </div>
         </section>
 
-        <section id="contact">
-            <div class="row d-flex justify-content-center align-items-center">
-            <h4>Contato</h4>
-            <p>...</p>
-            </div>
+        <section class="container d-flex align-items-center" id="contact">
+            <div class="text-center">
+                <div>
+                    <h4>Contato</h4>
+                    <h4>Para fazer contato conosco, mande mensagem no WhatsApp</h4>
+                    <a href="">Clique Aqui</a>
+                    <p>
+                        A empresa que se define como “uma escola das coisas que não se aprendem na escola” deixa os próprios alunos falarem de sua experiência na página de sobre. Isso ajuda a passar credibilidade, afinal, é mais fácil confiar nos próprios clientes, que experimentaram o produto ou serviço, do que na voz da própria empresa. Incluir relatos de clientes na página de sobre pode dar aos visitantes uma opinião mais realista e embasada sobre seu negócio.
+                    </p>
+                </div>
         </section>
     </body>
 </html>
