modify section contact

--- a/index.html
+++ b/index.html
@@ -87,19 +87,33 @@
         </section>
 
         <section id="perguntas-frenquentes" class="text-light container">
-            <div class="mb-3">
-                <h4 class="m-2 text-center">FAQ - Perguntas Frequentes</h4>
-                <div class="card-body">
-                    <h5 class="card-title">1- Existe um valor mínimo de pedido? </h5>
-                    <p class="card-text">Não.</p>
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">2- É possível encomendar um produto que não esteja à venda? </h5>
-                    <p class="card-text">Sim, mas será necessário, enviar todas as informações do produto.</p>
-                </div>
-                <div class="card-body">
-                    <h5 class="card-title">3- Eu consigo mandar uma parte da compra para um endereço e outra parte para outro?</h5>
-                    <p class="card-text">Não. Todos os produtos adquiridos em determinada Compra serão entregues conjuntamente, no mesmo endereço. Para enviar produtos para dois endereços diferentes, será necessário realizar duas Compras diferentes, em momentos distintivos.</p>
+            <div class="container align-items-center">
+                <div class="mb-3">
+                    <h1 class="m-2 text-center">FAQ - Perguntas Frequentes</h1>
+                    <div class="card-body">
+                        <h3 class="card-title">1- Existe um valor mínimo de pedido? </h3>
+                        <h5 id="resposta" class="card-text border border-warning mb-3">Não.</h5>
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">2- É possível encomendar um produto que não esteja à venda? </h3>
+                        <h5 id="resposta" class="card-text border border-warning mb-3">Sim, mas será necessário, enviar todas as informações do produto.</h5>
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">3- Eu consigo mandar uma parte da compra para um endereço e outra parte para outro?</h3>
+                        <h5 id="resposta" class="card-text border border-warning mb-3">Não. Todos os produtos adquiridos em determinada Compra serão entregues conjuntamente, no mesmo endereço. Para enviar produtos para dois endereços diferentes, será necessário realizar duas Compras diferentes, em momentos distintivos.</h5>
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">4- Qual o prazo de entrega? </h3>
+                        <h5 id="resposta" class="card-text border border-warning mb-3">Nossos produtos são importados de fora do Brasil, demorando entre 10 a 20 dias uteis para serem entregues, levando em média 12 dias para você ter sua encomenda em mãos após o envio. Trabalhamos com os fornecedores mais rapidos do mercado.</h5>
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">5- Quanto tempo para enviar? </h3>
+                        <h5 id="resposta" class="card-text border border-warning mb-3">O Limite para envio varia entre 2-5 dias uteis, levando em media 2 dias após a confirmação do pagamento</h5>
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">6- Frete Grátis? </h3>
+                        <h5 id="resposta" class="card-text border border-warning mb-3">Sim, Frete Gratis para todo brasil na compra de 3 ou mais camisas.</h5>
+                    </div>
                 </div>
             </div>
         </section>
@@ -109,7 +123,9 @@
                 <div>
                     <h4>Contato</h4>
                     <h4>Para fazer contato conosco, mande mensagem no WhatsApp</h4>
-                    <a href="">Clique Aqui</a>
+                    <button class="btn btn-success">
+                        <a href="https://wa.me/5511943202436">Fale conosco</a>
+                    </button>
                     <p>
                         A empresa que se define como “uma escola das coisas que não se aprendem na escola” deixa os próprios alunos falarem de sua experiência na página de sobre. Isso ajuda a passar credibilidade, afinal, é mais fácil confiar nos próprios clientes, que experimentaram o produto ou serviço, do que na voz da própria empresa. Incluir relatos de clientes na página de sobre pode dar aos visitantes uma opinião mais realista e embasada sobre seu negócio.
                     </p>
