modify layout-principal add d-flex class

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </nav>
         <section id="principal" class="row">
-            <div class="row">
+            <div id="layout-principal" class="d-flex align-items-end">
                 <div class="col-md-4 d-flex justify-content-center align-items-center">
                     <img id="img-layout" src="https://seeklogo.com/images/C/cbf-brasil-football-federation-logo-9DFCA91AA7-seeklogo.com.png" class="d-inline-block align-text-top" alt="...">
                 </div>
